@@ -1,6 +1,11 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - added [Author::Plicease::Resources] and am
+    using it for [@Author::Plicease] now.  This was
+    needed to allow the repo for Alien-Libarchive be
+    named Alien-Libarchive2
+  - fixed .travis.yml template
 
 1.49      2014-05-22 07:45:40 -0400
   - make this distribution properly dynamic
